--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -20,6 +20,10 @@
     "confirm-password": "تأكيد كلمة المرور",
     "submit": "يُقدِّم",
     "cancel": "يلغي",
+    "first-name-is-required":"الإسم الأول مطلوب",
+    "password-is-required":"كلمة المرور مطلوبة",
+    "confirm-password-is-required":"تأكيد كلمة المرور مطلوب",
+   "delete-manager" :"هل تريد حذف هذا المدير؟ ",
     "-------------MediaData--------": "-------------MediaData--------", 
     "all-media": "جميع وسائل الإعلام",
     "upload-images": "تحميل الصور",
