media dashboard manager menucategory done

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -1,8 +1,6 @@
 {
     "sign-in": "تسجيل الدخول للبقاء على اتصال.",
-    "logout": "تسجيل خروج",
-    "good-afternoon": "مساء الخير",
-    "menu-items": "arabic menu",
+    "logout": "تسجيل خروج", 
     "-------------ManagerData--------": "-------------ManagerData--------",
     "managers": "المديرين",
     "add-manager": "مدير الإعلانات",
@@ -20,11 +18,12 @@
     "confirm-password": "تأكيد كلمة المرور",
     "submit": "يُقدِّم",
     "cancel": "يلغي",
-    "first-name-is-required":"الإسم الأول مطلوب",
-    "password-is-required":"كلمة المرور مطلوبة",
-    "confirm-password-is-required":"تأكيد كلمة المرور مطلوب",
-   "delete-manager" :"هل تريد حذف هذا المدير؟ ",
-    "-------------MediaData--------": "-------------MediaData--------", 
+    "first-name-is-required": "الإسم الأول مطلوب",
+    "password-is-required": "كلمة المرور مطلوبة",
+    "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
+    "delete-manager": "هل تريد حذف هذا المدير؟ ",
+    "confirm-delete-button": "نعم أنا متأكد",
+    "-------------MediaData--------": "-------------MediaData--------",
     "all-media": "جميع وسائل الإعلام",
     "upload-images": "تحميل الصور",
     "payment-history": "تاريخ الدفع",
@@ -38,5 +37,64 @@
     "end-date": "تاريخ الانتهاء",
     "per-year": "كل سنة",
     "per-month": "كل شهر",
-    "delete": "يمسح"
+    "delete": "يمسح",
+
+    "-------------DashBoardData--------": "-------------DashBoardData--------",
+
+    "good-afternoon": "مساء الخير",
+    "good-morning": "صباح الخير",
+    "good-evening": "مساء الخير",
+    "menu-items": "عناصر القائمة",
+    "view-all": "عرض الكل",
+    "subscription-plan": "خطة الاشتراك", 
+    "view-details": "عرض التفاصيل",
+    "owner": "مالك",
+    "basic": "أساسي",
+    "start-date":"تاريخ البدء",
+        "end-date": "تاريخ الانتهاء",
+    "more": "أكثر",
+    "managers": "المديرين",
+    "user-name": "اسم المستخدم",
+    "e-mail": "بريد إلكتروني",
+    "assigned-to": "مخصص ل",
+    "logout": "تسجيل خروج",
+    "download-now": "التحميل الان",
+
+    "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
+    "good-afternoon": "مساء الخير",
+    "restaurants": "مطاعم",
+    "restaurant-name": "اسم المطعم",
+    "name": "اسم",
+    "email": "بريد إلكتروني",
+    "mobile-no.": "رقم المحمول.",
+    "generated-link": "الرابط الذي تم إنشاؤه",
+    "action": "فعل",
+    "previous": "سابق",
+    "next": "التالي",
+    "new-customer": "عميل جديد",
+    "enter-restaurant-name": " أدخل اسم المطعم",
+    "owner-name": "اسم المالك",
+    "enter-owner-name": "أدخل اسم المالك",
+    "enter-your-email": "أدخل بريدك الإلكتروني",
+    "phone-number": "رقم التليفون",
+    "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
+    "enter-your-shop-no": "أدخل رقم متجرك",
+    "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
+    "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
+    "town-city-name": "اسم البلدة/المدينة",
+    "landmark-optional": "معلم معروف (خياري)",
+    "pincode": "الرمز السري",
+    "state": "ولاية",
+    "country": "دولة",
+    "description": "وصف",
+    "type-here": "أكتب هنا",
+    "create-lead": "إنشاء الرصاص",
+    "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+    "restaurant-name-is-required": "اسم المطعم مطلوب",
+    "name-is-required": "مطلوب اسم",
+    "city-name-is-required": "اسم المدينة مطلوب",
+    "pincode-is-required": "مطلوب الرمز السري",
+    "state-is-required": "الدولة مطلوبة",
+    "country-is-required": "الدولة مطلوبة"
+
 }
