--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -1,46 +1,104 @@
 {
-    "sign-in":"Sign in to stay connected.",
-    "logout":"Logout",
-    "good-afternoon":"Good afternoon",
-    "menu-items":"english menu", 
+    "sign-in": "Sign in to stay connected.", 
 
     "-------------ManagerData--------": "-------------ManagerData--------",
-    "managers":"Managers",
-    "add-manager":"Add Manager",
-    "user-name":"User Name", 
-    "mobile-no":"Mobile No.", 
-    "previous":"Previous",
-    "next":"Next",
-    "add-new-manager":"Add New Manager",
-    "name":"Name",
-    "enter-your-name":"Enter your Name",
-    "email":"Email",
-    "phone-number":"Phone Number",
-    "password":"Password",
-    "confirm-password":"Confirm Password",
-    "submit":"Submit",
-    "cancel":"Cancel",
+    "managers": "Managers",
+    "add-manager": "Add Manager",
+    "user-name": "User Name",
+    "mobile-no": "Mobile No.",
+    "previous": "Previous",
+    "next": "Next",
+    "add-new-manager": "Add New Manager",
+    "name": "Name",
+    "enter-your-name": "Enter your Name",
+    "email": "Email",
+    "phone-number": "Phone Number",
+    "password": "Password",
+    "confirm-password": "Confirm Password",
+    "submit": "Submit",
+    "cancel": "Cancel",
     "delete": "Delete",
-    "first-name-is-required":"first name is required",
-    "password-is-required":"Password is required",
-    "confirm-password-is-required":"Confirm Password is required",
-    "delete-manager" :"Do you want to Delete this Manager?",
+    "first-name-is-required": "first name is required",
+    "password-is-required": "Password is required",
+    "confirm-password-is-required": "Confirm Password is required",
+    "delete-manager": "Do you want to Delete this Manager?",
+    "confirm-delete-button": "Yes, I’m Sure",
+
+    "-------------MediaData--------": "-------------MediaData--------",
+    "all-media": "All Media",
+    "upload-images": "Upload Images",
+    "payment-history": "Payment History",
+    "basic": "Basic",
+    "year": "Year",
+    "month": "Month",
+    "status": "Status",
+    "amount": "Amount",
+    "start-date": "Start Date",
+    "plan": "Plan",
+    "end-date": "End Date",
+    "action": "Action",
+    "per-year": "Per Year",
+    "per-month": "Per Month",
+
+    "-------------DashBoardData--------": "-------------DashBoardData--------",
 
 
-    "-------------MediaData--------": "-------------MediaData--------", 
+    "good-afternoon": "Good Afternoon",
+    "good-morning": "Good Morning",
+    "good-evening": "Good Evening",
+    "menu-items": "Menu Items",
+    "view-all": "View All",
+    "subscription-plan": "Subscription Plan",
+    "view-details": "View Details",
+    "owner": "owner",
+    "basic": "Basic",
+    "start-date": "Start Date",
+    "end-date": "End Date",
+    "more": "More",
+    "managers": "Managers",
+    "user-name": "User Name",
+    "e-mail": "E-mail",
+    "assigned-to": "Assigned to",
+    "logout": "Logout",
+    "download-now": "Download Now",
 
-    "all-media":"All Media",
-    "upload-images":"Upload Images",
-    "payment-history":"Payment History",
-    "basic":"Basic",
-    "year":"Year",
-    "month":"Month",
-    "status":"Status",
-    "amount":"Amount",
-    "start-date":"Start Date",
-    "plan":"Plan",
-    "end-date":"End Date",
-    "action":"Action",
-    "per-year":"Per Year",
-    "per-month":"Per Month"
+
+    "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
+
+
+    "restaurants": "Restaurants",
+    "restaurant-name": "Restaurants",
+    "name": "Name",
+    "email": "Email",
+    "mobile-no": "Mobile No.",
+    "generated-link": "Generated Link",
+    "action": "Action",
+    "previous": "previous",
+    "next": "Next",
+    "new-customer": "New Customer",
+    "enter-restaurant-name": "Enter Restaurant Name",
+    "owner-name": "Owner Name",
+    "enter-owner-name": "Enter Owner Name",
+    "enter-your-email": "Enter Your Email",
+    "phone-number": "Phone Number",
+    "shop-no-Building-optional": "Shop no./Building (Optional)",
+    "enter-your-shop-no": "Enter your Shop no",
+    "area-street-name-Optional": "Area/Street Name (Optional)",
+    "enter-your-street-name": "Enter your Street Name",
+    "town-city-name": "Town/City Name",
+    "landmark-optional": "Landmark (Optional)",
+    "pincode": "Pincode",
+    "state": "State",
+    "country": "Country",
+    "description": "Description",
+    "type-here": "Type here",
+    "create-lead": "Create Lead",
+    "on-board-and-create-password": "OnBoard and Create Password",
+    "restaurant-name-is-required": "Restaurant name is required",
+    "name-is-required": "Name is required",
+    "city-name-is-required": "City name is required",
+    "pincode-is-required": "Pincode is required",
+    "state-is-required": "state is required",
+    "country-is-required": "country is required"
+
 }
