--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -1,46 +1,55 @@
 {
-    "menu-categories" : "Menu Categories",
-    "edit" : "Edit",
-    "delete" : "Delete",
-    "reorder" : "Reorder",
-    "bestseller" : "Bestseller",
-    "upload-menu" : "Upload Menu",
-    "add-menu" : "Add Menu",
-    "add-categories" : "Add Categories",
-    "download-sample" : "Download Sample",
-    "more" : "More",
-    "edit-category" : "Edit Category",
-    "category-name": "Category Name",
-    "upload-image" : "Upload Image (Optional)",
-    "upload" : "Upload",
-    "cancel" : "Cancel",
-    "submit" : "Submit",
-    "delete-category-confirmation-message" : "Do you want to Delete this Category?",
-    "confirm-delete-button" : "Yes, I’m Sure",
-    "delete-menu-item-confirmation-message" : "Do you want to Delete this Menu Item?",
-    "reorder-categories" : "Reorder Categories",
-    "back" : "Back",
-    "save" : "Save",
-    "enter-your-name" : "Enter your Name",
-    "please-create-category" : "Please Create Category",
-    "edit-menu-item" : "Edit Menu Item",
-    "name" : "Name",
-    "enter-your-item-name" :"Enter your Item Name",
-    "please-enter-item" : "Please Enter Item",
-    "item-price" : "Item Price",
-    "enter-the-amount" : "Enter the amount",
-    "please-enter-price" : "Please Enter Price",
-    "calories" : "Calories", 
-    "category" : "Category",
-    "item-type" : "Item Type",
-    "please-select-item-type" : "Please Select Item Type .....", 
-    "description" : "Description (Optional)" ,
-    "please-enter-description" : "Please Enter Description",
-    "enter-your-description" : "Enter your Description", 
-    "add-menu-item" : "Add Menu Item", 
-    "please-enter-item-name" : "Please Enter Item Name",
-    "please-enter-calories" : "Please Enter Calories",
-    "please-select-category" : "Please Select Category.....",
-    "type-here" : "Type Here",
-    "add-category" : "Add Category"
+  "items": "Items",
+  "menu-categories": "Menu Categories",
+  "edit": "Edit",
+  "delete": "Delete",
+  "reorder": "Reorder",
+  "bestseller": "Bestseller",
+  "upload-menu": "Upload Menu",
+  "add-menu": "Add Menu",
+  "add-categories": "Add Categories",
+  "download-sample": "Download Sample",
+  "more": "More",
+  "edit-category": "Edit Category",
+  "category-name": "Category Name",
+  "upload-image": "Upload Image (Optional)",
+  "upload": "Upload",
+  "cancel": "Cancel",
+  "submit": "Submit",
+  "delete-category-confirmation-message": "Do you want to Delete this Category?",
+  "confirm-delete-button": "Yes, I’m Sure",
+  "delete-menu-item-confirmation-message": "Do you want to Delete this Menu Item?",
+  "reorder-categories": "Reorder Categories",
+  "back": "Back",
+  "save": "Save",
+  "enter-your-name": "Enter your Name",
+  "please-create-category": "Please Create Category",
+  "edit-menu-item": "Edit Menu Item",
+  "name": "Name",
+  "enter-your-item-name": "Enter your Item Name",
+  "please-enter-item": "Please Enter Item",
+  "item-price": "Item Price",
+  "enter-the-amount": "Enter the amount",
+  "please-enter-price": "Please Enter Price",
+  "calories": "Calories",
+  "category": "Category",
+  "item-type": "Item Type",
+  "please-select-item-type": "Please Select Item Type .....",
+  "description": "Description (Optional)",
+  "please-enter-description": "Please Enter Description",
+  "enter-your-description": "Enter your Description",
+  "add-menu-item": "Add Menu Item",
+  "please-enter-item-name": "Please Enter Item Name",
+  "please-enter-menu": "Please Enter Menu",
+  "calories-must-be-digit": "Calories must contain only digits",
+  "please-enter-calories": "Please Enter Calories",
+  "please-select-category": "Please Select Category.....",
+  "please-enter-item-type": "Please Enter Item Type",
+  "please-enter-currency": "Please Enter Currency",
+  "type-here": "Type Here",
+  "add-category": "Add Category",
+
+  "explore-our-pricing-plans": "Explore Our Pricing Plans",
+  "sar": "SAR",
+  "per": "per"
 }
