Restaurant page arabic.

--- a/src/i18n/locales/ar-sa/LeadTranslation.json
+++ b/src/i18n/locales/ar-sa/LeadTranslation.json
@@ -1,70 +1,80 @@
 {
-    "leads": "يؤدي",
-    "restaurant-name": "مطعم اسم",
-    "name": "اسم",
-    "mobile-no.": "رقم المحمول.",
-    "email": "بريد إلكتروني",
-    "action": "فعل",
-    "previous":"سابق",
-    "next":"التالي",
-    "1":"١",
-    "2":"٢",
-    "3":"٣",
-    "4":"٤",
-    "5":"٥",
-    "6":"٦",
-    "view-more":"عرض المزيد",
-    "owner-name":"اسم المالك",   
-    "new-customer":"عميل جديد",
-    "phone-number":"رقم التليفون",
-    "shop-no-optional":"متجر رقم. (خياري)",
-    "street-name":"اسم الشارع",
-    "city-name":"اسم المدينة",
-    "landmark-optional":"معلم (اختياري)",
-    "area-street-name":"اسم المنطقة/الشارع (اختياري)",
-    "pincode":"الرمز السري",
-    "state":"ولاية",
-    "country":"دولة",
-    "description":"وصف",
-    "onboarding":"الإعداد",
-    "password":"كلمة المرور",
-    "confirm-password":"تأكيد كلمة المرور",
-    "submit":"يُقدِّم",
-    "onboard-and-create-password":"على متن الطائرة وإنشاء كلمة المرور",
-    "restaurant-name-is-required":"اسم المطعم مطلوب",
-    "shop_no-is-required":"مطلوب ",
-    "street-name-is-required":"اسم الشارع مطلوب",
-    "City-name-is-required":"اسم المدينة مطلوب",
-    "landmark-is-required":"المعلم مطلوب",
-    "pincode-is-required":"مطلوب الرمز السري",
-    "state-is-required":"الدولة مطلوبة",
-    "country-is-required":"الدولة مطلوبة",
-    "description-is-required":"الوصف مطلوب",
-    "enter-your-name":"أدخل أسمك",
-    "enter-your-shop-no":"أدخل رقم متجرك",
-    "enter-your-street-name":"أدخل اسم الشارع الخاص بك",
-    "nearby-landmark":"معلم قريب",
-    "type-here":"أكتب هنا...",
-    "password-is-required":"كلمة المرور مطلوبة",
-    "confirm-password-is-required":"تأكيد كلمة المرور مطلوب",
-    "enter-restaurant-name":"أدخل اسم المطعم",
-    "enter-owner-name":"أدخل اسم المالك",
-    "enter-your-email":"أدخل بريدك الإلكتروني",
-    "enter-your-city-name":"أدخل اسم مدينتك",
-    "create-lead":"إنشاء الرصاص",
-    "town/city-name":"اسم البلدة/المدينة",
+  "leads": "يؤدي",
+  "restaurant-name": "مطعم اسم",
+  "name": "اسم",
+  "mobile-no.": "رقم المحمول.",
+  "email": "بريد إلكتروني",
+  "action": "فعل",
+  "previous": "سابق",
+  "next": "التالي",
+  "1": "١",
+  "2": "٢",
+  "3": "٣",
+  "4": "٤",
+  "5": "٥",
+  "6": "٦",
+  "view-more": "عرض المزيد",
+  "owner-name": "اسم المالك",
+  "new-customer": "عميل جديد",
+  "phone-number": "رقم التليفون",
+  "shop-no-optional": "متجر رقم. (خياري)",
+  "street-name": "اسم الشارع",
+  "city-name": "اسم المدينة",
+  "landmark-optional": "معلم (اختياري)",
+  "area-street-name": "اسم المنطقة/الشارع (اختياري)",
+  "pincode": "الرمز السري",
+  "state": "ولاية",
+  "country": "دولة",
+  "description": "وصف",
+  "onboarding": "الإعداد",
+  "password": "كلمة المرور",
+  "confirm-password": "تأكيد كلمة المرور",
+  "submit": "يُقدِّم",
+  "onboard-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "restaurant-name-is-required": "اسم المطعم مطلوب",
+  "shop-no-is-required": "رقم المحل مطلوب",
+  "street-name-is-required": "اسم الشارع مطلوب",
+  "City-name-is-required": "اسم المدينة مطلوب",
+  "landmark-is-required": "المعلم مطلوب",
+  "pincode-is-required": "مطلوب الرمز السري",
+  "state-is-required": "الدولة مطلوبة",
+  "country-is-required": "الدولة مطلوبة",
+  "description-is-required": "الوصف مطلوب",
+  "enter-your-name": "أدخل أسمك",
+  "enter-your-shop-no": "أدخل رقم متجرك",
+  "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
+  "nearby-landmark": "معلم قريب",
+  "type-here": "أكتب هنا...",
+  "password-is-required": "كلمة المرور مطلوبة",
+  "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
+  "enter-restaurant-name": "أدخل اسم المطعم",
+  "enter-owner-name": "أدخل اسم المالك",
+  "enter-your-email": "أدخل بريدك الإلكتروني",
+  "enter-your-city-name": "أدخل اسم مدينتك",
+  "create-lead": "إنشاء الرصاص",
+  "town/city-name": "اسم البلدة/المدينة",
   "name-is-required": "الاسم مطلوب",
   "city-name-is-required": "اسم المدينة مطلوب",
-  "success":"نجاح !",
-  "successfully-registered":"تم تسجيل [اسم المطعم] بنجاح",
-  "link":"وصلة",
-  "back-to-home":"العودة إلى المنزل",
-  "pincode-must-not-contain-spaces":"يجب ألا يحتوي الرمز السري على مسافات",
-  "pincode-must-contain-only-digits":"يجب أن يحتوي الرمز السري على أرقام فقط"
+  "success": "نجاح !",
+  "successfully-registered": "تم تسجيل [اسم المطعم] بنجاح",
+  "link": "وصلة",
+  "back-to-home": "العودة إلى المنزل",
+  "pincode-must-not-contain-spaces": "يجب ألا يحتوي الرمز السري على مسافات",
+  "pincode-must-contain-only-digits": "يجب أن يحتوي الرمز السري على أرقام فقط",
+  "password-not-contain-spaces": "يجب ألا يحتوي اسم كلمة المرور على مسافات",
+  "owner-name-is-required": "اسم المالك مطلوب",
+  "email-is-invalid": "البريد الإلكتروني غير صالح",
+  "sign-in": "تسجيل الدخول للبقاء على اتصال.",
+  "logout": "تسجيل خروج",
+  "good-afternoon": "مساء الخير",
+  "restaurants": "مطاعم",
+  "generated-link": "الرابط الذي تم إنشاؤه",
+  "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
+  "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
+  "town-city-name": "اسم البلدة/المدينة",
+  "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "reset-password" : "إعادة تعيين كلمة المرور",
+  "edit-profile" : "تعديل الملف الشخصي",
+  "onBoard-and-Create-Password" : "على متن الطائرة وإنشاء كلمة المرور"
+
 }
-
-
-
-
-
-    
