ui menu change and

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -1,240 +1,250 @@
 {
-    "sign-in": "تسجيل الدخول للبقاء على اتصال.",
-    "logout": "تسجيل خروج", 
-    "-------------ManagerData--------": "-------------ManagerData--------",
-    "managers": "المديرين",
-    "add-manager": "مدير الإعلانات",
-    "user-name": "اسم المستخدم",
-    "email": "بريد إلكتروني",
-    "mobile-no": "رقم المحمول.",
-    "action": "فعل",
-    "previous": "سابق",
-    "next": "التالي",
-    "add-new-manager": "إضافة مدير جديد",
-    "name": "اسم",
-    "enter-your-name": "أدخل أسمك",
-    "phone-number": "رقم التليفون",
-    "password": "كلمة المرور",
-    "confirm-password": "تأكيد كلمة المرور",
-    "submit": "يُقدِّم",
-    "cancel": "يلغي",
-    "first-name-is-required": "الإسم الأول مطلوب",
-    "password-is-required": "كلمة المرور مطلوبة",
-    "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
-    "delete-manager": "هل تريد حذف هذا المدير؟ ",
-    "confirm-delete-button": "نعم أنا متأكد",
-    "-------------MediaData--------": "-------------MediaData--------",
-    "all-media": "جميع وسائل الإعلام",
-    "upload-images": "تحميل الصور",
-    "payment-history": "تاريخ الدفع",
-    "basic": "أساسي",
-    "year": "سنة",
-    "month": "شهر",
-    "status": "حالة",
-    "amount": "كمية",
-    "start-date": "تاريخ البدء",
-    "plan": "يخطط",
-    "end-date": "تاريخ الانتهاء",
-    "per-year": "كل سنة",
-    "per-month": "كل شهر",
-    "delete": "يمسح",
+  "sign-in": "تسجيل الدخول للبقاء على اتصال.",
+  "logout": "تسجيل خروج",
+  "-------------ManagerData--------": "-------------ManagerData--------",
+  "managers": "المديرين",
+  "add-manager": "مدير الإعلانات",
+  "user-name": "اسم المستخدم",
+  "email": "بريد إلكتروني",
+  "mobile-no": "رقم المحمول.",
+  "action": "فعل",
+  "previous": "سابق",
+  "next": "التالي",
+  "add-new-manager": "إضافة مدير جديد",
+  "name": "اسم",
+  "enter-your-name": "أدخل أسمك",
+  "phone-number": "رقم التليفون",
+  "password": "كلمة المرور",
+  "confirm-password": "تأكيد كلمة المرور",
+  "submit": "يُقدِّم",
+  "cancel": "يلغي",
+  "first-name-is-required": "الإسم الأول مطلوب",
+  "password-is-required": "كلمة المرور مطلوبة",
+  "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
+  "delete-manager": "هل تريد حذف هذا المدير؟ ",
+  "confirm-delete-button": "نعم أنا متأكد",
+  "-------------MediaData--------": "-------------MediaData--------",
+  "all-media": "جميع وسائل الإعلام",
+  "upload-images": "تحميل الصور",
+  "payment-history": "تاريخ الدفع",
+  "basic": "أساسي",
+  "year": "سنة",
+  "month": "شهر",
+  "status": "حالة",
+  "amount": "كمية",
+  "start-date": "تاريخ البدء",
+  "plan": "يخطط",
+  "end-date": "تاريخ الانتهاء",
+  "per-year": "كل سنة",
+  "per-month": "كل شهر",
+  "delete": "يمسح",
 
-    "-------------DashBoardData--------": "-------------DashBoardData--------",
+  "-------------DashBoardData--------": "-------------DashBoardData--------",
 
-    "good-afternoon": "مساء الخير",
-    "good-morning": "صباح الخير",
-    "good-evening": "مساء الخير",
-    "menu-items": "عناصر القائمة",
-    "view-all": "عرض الكل",
-    "subscription-plan": "خطة الاشتراك", 
-    "view-details": "عرض التفاصيل",
-    "owner": "مالك",
-    "basic": "أساسي",
-    "start-date":"تاريخ البدء",
-        "end-date": "تاريخ الانتهاء",
-    "more": "أكثر",
-    "managers": "المديرين",
-    "user-name": "اسم المستخدم",
-    "e-mail": "بريد إلكتروني",
-    "assigned-to": "مخصص ل",
-    "logout": "تسجيل خروج",
-    "download-now": "التحميل الان",
+  "good-afternoon": "مساء الخير",
+  "good-morning": "صباح الخير",
+  "good-evening": "مساء الخير",
+  "menu-items": "عناصر القائمة",
+  "view-all": "عرض الكل",
+  "subscription-plan": "خطة الاشتراك",
+  "view-details": "عرض التفاصيل",
+  "owner": "مالك",
+  "basic": "أساسي",
+  "start-date": "تاريخ البدء",
+  "end-date": "تاريخ الانتهاء",
+  "more": "أكثر",
+  "managers": "المديرين",
+  "user-name": "اسم المستخدم",
+  "e-mail": "بريد إلكتروني",
+  "assigned-to": "مخصص ل",
+  "logout": "تسجيل خروج",
+  "download-now": "التحميل الان",
 
-    "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
-    "good-afternoon": "مساء الخير",
-    "restaurants": "مطاعم",
-    "restaurant-name": "اسم المطعم",
-    "name": "اسم",
-    "email": "بريد إلكتروني",
-    "mobile-no.": "رقم المحمول.",
-    "generated-link": "الرابط الذي تم إنشاؤه",
-    "action": "فعل",
-    "previous": "سابق",
-    "next": "التالي",
-    "new-customer": "عميل جديد",
-    "enter-restaurant-name": " أدخل اسم المطعم",
-    "owner-name": "اسم المالك",
-    "enter-owner-name": "أدخل اسم المالك",
-    "enter-your-email": "أدخل بريدك الإلكتروني",
-    "phone-number": "رقم التليفون",
-    "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
-    "enter-your-shop-no": "أدخل رقم متجرك",
-    "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
-    "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
-    "town-city-name": "اسم البلدة/المدينة",
-    "landmark-optional": "معلم معروف (خياري)",
-    "pincode": "الرمز السري",
-    "state": "ولاية",
-    "country": "دولة",
-    "description": "وصف",
-    "type-here": "أكتب هنا",
-    "create-lead": "إنشاء الرصاص",
-    "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
-    "restaurant-name-is-required": "اسم المطعم مطلوب",
-    "name-is-required": "مطلوب اسم",
-    "city-name-is-required": "اسم المدينة مطلوب",
-    "pincode-is-required": "مطلوب الرمز السري",
-    "state-is-required": "الدولة مطلوبة",
-    "country-is-required": "الدولة مطلوبة",
+  "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
+  "good-afternoon": "مساء الخير",
+  "restaurants": "مطاعم",
+  "restaurant-name": "اسم المطعم",
+  "name": "اسم",
+  "email": "بريد إلكتروني",
+  "mobile-no.": "رقم المحمول.",
+  "generated-link": "الرابط الذي تم إنشاؤه",
+  "action": "فعل",
+  "previous": "سابق",
+  "next": "التالي",
+  "new-customer": "عميل جديد",
+  "enter-restaurant-name": " أدخل اسم المطعم",
+  "owner-name": "اسم المالك",
+  "enter-owner-name": "أدخل اسم المالك",
+  "enter-your-email": "أدخل بريدك الإلكتروني",
+  "phone-number": "رقم التليفون",
+  "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
+  "enter-your-shop-no": "أدخل رقم متجرك",
+  "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
+  "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
+  "town-city-name": "اسم البلدة/المدينة",
+  "landmark-optional": "معلم معروف (خياري)",
+  "pincode": "الرمز السري",
+  "state": "ولاية",
+  "country": "دولة",
+  "description": "وصف",
+  "type-here": "أكتب هنا",
+  "create-lead": "إنشاء الرصاص",
+  "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "restaurant-name-is-required": "اسم المطعم مطلوب",
+  "name-is-required": "مطلوب اسم",
+  "city-name-is-required": "اسم المدينة مطلوب",
+  "pincode-is-required": "مطلوب الرمز السري",
+  "state-is-required": "الدولة مطلوبة",
+  "country-is-required": "الدولة مطلوبة",
+
+  "-------------CategoriesData--------": "-------------CategoriesData--------",
+
+  "items": "أغراض",
+  "menu-categories": "فئات القائمة",
+  "edit": "يحرر",
+  "delete": "يمسح",
+  "reorder": "إعادة الترتيب",
+  "bestseller": "الأكثر مبيعًا",
+  "upload-menu": "تحميل القائمة",
+  "add-menu": "إضافة القائمة",
+  "add-categories": "إضافة فئات",
+  "download-sample": "تنزيل العينة",
+  "more": "أكثر",
+  "edit-category": "تحرير الفئة",
+  "category-name": "اسم التصنيف",
+  "upload-image": "تحميل الصورة (اختياري)",
+  "upload": "رفع",
+  "cancel": "يلغي",
+  "submit": "يُقدِّم",
+  "delete-category-confirmation-message": "هل تريد حذف هذه الفئة؟",
+  "confirm-delete-button": "نعم أنا متأكد",
+  "delete-menu-item-confirmation-message": "هل تريد حذف عنصر القائمة هذا؟",
+  "reorder-categories": "إعادة ترتيب الفئات",
+  "back": "خلف",
+  "save": "يحفظ",
+  "enter-your-name": "أدخل أسمك",
+  "please-create-category": "الرجاء إنشاء الفئة",
+  "edit-menu-item": "تحرير عنصر القائمة",
+  "name": "اسم",
+  "enter-your-item-name": "أدخل اسم العنصر الخاص بك",
+  "please-enter-item": "الرجاء إدخال العنصر",
+  "item-price": "سعر السلعة",
+  "enter-the-amount": "أدخل المبلغ",
+  "please-enter-price": "الرجاء إدخال السعر",
+  "calories": "سعرات حرارية",
+  "category": "فئة",
+  "item-type": "نوع العنصر",
+  "please-select-item-type": "الرجاء تحديد نوع العنصر .....",
+  "description": "وصف (اختياري)",
+  "please-enter-description": "الرجاء إدخال الوصف",
+  "enter-your-description": "أدخل الوصف الخاص بك",
+  "add-menu-item": "إضافة عنصر القائمة",
+  "please-enter-item-name": "الرجاء إدخال اسم العنصر",
+  "please-enter-calories": "الرجاء إدخال السعرات الحرارية",
+  "please-select-category": "الرجاء تحديد الفئة .....",
+  "type-here": "أكتب هنا",
+  "add-category": "إضافة فئة",
+  "please-enter-item-type": "الرجاء إدخال نوع العنصر",
+
+  "explore-our-pricing-plans": "استكشف خطط التسعير لدينا",
+  "per": "لكل",
+  "get-started": "البدء",
+
+  "-------------LeadsData--------": "-------------LeadsData--------",
+
+  "leads": "يؤدي",
+  "restaurant-name": "مطعم اسم",
+  "name": "اسم",
+  "mobile-no.": "رقم المحمول.",
+  "email": "بريد إلكتروني",
+  "action": "فعل",
+  "previous": "سابق",
+  "next": "التالي",
+  "1": "١",
+  "2": "٢",
+  "3": "٣",
+  "4": "٤",
+  "5": "٥",
+  "6": "٦",
+  "view-more": "عرض المزيد",
+  "owner-name": "اسم المالك",
+  "new-customer": "عميل جديد",
+  "phone-number": "رقم التليفون",
+  "shop-no-optional": "متجر رقم. (خياري)",
+  "street-name": "اسم الشارع",
+  "city-name": "اسم المدينة",
+  "landmark-optional": "معلم (اختياري)",
+  "area-street-name": "اسم المنطقة/الشارع (اختياري)",
+  "pincode": "الرمز السري",
+  "state": "ولاية",
+  "country": "دولة",
+  "description": "وصف",
+  "onboarding": "الإعداد",
+  "password": "كلمة المرور",
+  "confirm-password": "تأكيد كلمة المرور",
+  "submit": "يُقدِّم",
+  "onboard-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "restaurant-name-is-required": "اسم المطعم مطلوب",
+  "shop-no-is-required": "رقم المحل مطلوب",
+  "street-name-is-required": "اسم الشارع مطلوب",
+  "City-name-is-required": "اسم المدينة مطلوب",
+  "landmark-is-required": "المعلم مطلوب",
+  "pincode-is-required": "مطلوب الرمز السري",
+  "state-is-required": "الدولة مطلوبة",
+  "country-is-required": "الدولة مطلوبة",
+  "description-is-required": "الوصف مطلوب",
+  "enter-your-name": "أدخل أسمك",
+  "enter-your-shop-no": "أدخل رقم متجرك",
+  "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
+  "nearby-landmark": "معلم قريب",
+  "type-here": "أكتب هنا...",
+  "password-is-required": "كلمة المرور مطلوبة",
+  "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
+  "enter-restaurant-name": "أدخل اسم المطعم",
+  "enter-owner-name": "أدخل اسم المالك",
+  "enter-your-email": "أدخل بريدك الإلكتروني",
+  "enter-your-city-name": "أدخل اسم مدينتك",
+  "create-lead": "إنشاء الرصاص",
+  "town/city-name": "اسم البلدة/المدينة",
+  "name-is-required": "الاسم مطلوب",
+  "city-name-is-required": "اسم المدينة مطلوب",
+  "success": "نجاح !",
+  "successfully-registered": "تم تسجيل [اسم المطعم] بنجاح",
+  "link": "وصلة",
+  "back-to-home": "العودة إلى المنزل",
+  "pincode-must-not-contain-spaces": "يجب ألا يحتوي الرمز السري على مسافات",
+  "pincode-must-contain-only-digits": "يجب أن يحتوي الرمز السري على أرقام فقط",
+  "password-not-contain-spaces": "يجب ألا يحتوي اسم كلمة المرور على مسافات",
+  "owner-name-is-required": "اسم المالك مطلوب",
+  "email-is-invalid": "البريد الإلكتروني غير صالح",
+  "sign-in": "تسجيل الدخول للبقاء على اتصال.",
+  "logout": "تسجيل خروج",
+  "good-afternoon": "مساء الخير",
+  "restaurants": "مطاعم",
+  "generated-link": "الرابط الذي تم إنشاؤه",
+  "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
+  "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
+  "town-city-name": "اسم البلدة/المدينة",
+  "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "reset-password": "إعادة تعيين كلمة المرور",
+  "edit-profile": "تعديل الملف الشخصي",
+  "onBoard-and-Create-Password": "على متن الطائرة وإنشاء كلمة المرور",
+
+  "-------------MENUData--------": "-------------MENUData--------",
+  "veg": "نباتي",
+  "non-veg": "غير نباتي",
+  "bestseller": "الأكثر مبيعًا",
+  "offer": "يعرض",
+  "search-a-food" : "بحث عن طعام .....",
 
 
-    "-------------CategoriesData--------": "-------------CategoriesData--------",
+  "-------------SidebarData--------": "-------------SidebarData--------",
+  "dashboard" : "لوحة القيادة",
+  "managers" : "المديرين",
+  "menu-categories": "فئات القائمة",
+  "media-files": "ملفات الوسائط",
+  "payment-history": "تاريخ الدفع",
+  "leads": "يؤدي"
 
-
-    "items" : "أغراض",
-    "menu-categories" : "فئات القائمة",
-    "edit" : "يحرر",
-    "delete" : "يمسح",
-    "reorder" : "إعادة الترتيب",
-    "bestseller" : "الأكثر مبيعًا",
-    "upload-menu" : "تحميل القائمة",
-    "add-menu" : "إضافة القائمة",
-    "add-categories" : "إضافة فئات",
-    "download-sample" : "تنزيل العينة",
-    "more" : "أكثر",
-    "edit-category" : "تحرير الفئة",
-    "category-name": "اسم التصنيف",
-    "upload-image" : "تحميل الصورة (اختياري)",
-    "upload" : "رفع",
-    "cancel" : "يلغي",
-    "submit" : "يُقدِّم",
-    "delete-category-confirmation-message" : "هل تريد حذف هذه الفئة؟",
-    "confirm-delete-button" : "نعم أنا متأكد",
-    "delete-menu-item-confirmation-message" : "هل تريد حذف عنصر القائمة هذا؟",
-    "reorder-categories" : "إعادة ترتيب الفئات",
-    "back" : "خلف",
-    "save" : "يحفظ",
-    "enter-your-name" : "أدخل أسمك",
-    "please-create-category" : "الرجاء إنشاء الفئة",
-    "edit-menu-item" : "تحرير عنصر القائمة",
-    "name" : "اسم",
-    "enter-your-item-name" :"أدخل اسم العنصر الخاص بك",
-    "please-enter-item" : "الرجاء إدخال العنصر",
-    "item-price" : "سعر السلعة",
-    "enter-the-amount" : "أدخل المبلغ",
-    "please-enter-price" : "الرجاء إدخال السعر",
-    "calories" : "سعرات حرارية", 
-    "category" : "فئة",
-    "item-type" : "نوع العنصر",
-    "please-select-item-type" : "الرجاء تحديد نوع العنصر .....", 
-    "description" : "وصف (اختياري)" ,
-    "please-enter-description" : "الرجاء إدخال الوصف",
-    "enter-your-description" : "أدخل الوصف الخاص بك", 
-    "add-menu-item" : "إضافة عنصر القائمة", 
-    "please-enter-item-name" : "الرجاء إدخال اسم العنصر",
-    "please-enter-calories" : "الرجاء إدخال السعرات الحرارية",
-    "please-select-category" : "الرجاء تحديد الفئة .....",
-    "type-here" : "أكتب هنا",
-    "add-category" : "إضافة فئة",
-    "please-enter-item-type" : "الرجاء إدخال نوع العنصر",
-
-
-    "explore-our-pricing-plans":"استكشف خطط التسعير لدينا",
-    "per":"لكل",
-    "get-started" : "البدء",
-
-
-    "-------------LeadsData--------": "-------------LeadsData--------",
-    
-        "leads": "يؤدي",
-        "restaurant-name": "مطعم اسم",
-        "name": "اسم",
-        "mobile-no.": "رقم المحمول.",
-        "email": "بريد إلكتروني",
-        "action": "فعل",
-        "previous": "سابق",
-        "next": "التالي",
-        "1": "١",
-        "2": "٢",
-        "3": "٣",
-        "4": "٤",
-        "5": "٥",
-        "6": "٦",
-        "view-more": "عرض المزيد",
-        "owner-name": "اسم المالك",
-        "new-customer": "عميل جديد",
-        "phone-number": "رقم التليفون",
-        "shop-no-optional": "متجر رقم. (خياري)",
-        "street-name": "اسم الشارع",
-        "city-name": "اسم المدينة",
-        "landmark-optional": "معلم (اختياري)",
-        "area-street-name": "اسم المنطقة/الشارع (اختياري)",
-        "pincode": "الرمز السري",
-        "state": "ولاية",
-        "country": "دولة",
-        "description": "وصف",
-        "onboarding": "الإعداد",
-        "password": "كلمة المرور",
-        "confirm-password": "تأكيد كلمة المرور",
-        "submit": "يُقدِّم",
-        "onboard-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
-        "restaurant-name-is-required": "اسم المطعم مطلوب",
-        "shop-no-is-required": "رقم المحل مطلوب",
-        "street-name-is-required": "اسم الشارع مطلوب",
-        "City-name-is-required": "اسم المدينة مطلوب",
-        "landmark-is-required": "المعلم مطلوب",
-        "pincode-is-required": "مطلوب الرمز السري",
-        "state-is-required": "الدولة مطلوبة",
-        "country-is-required": "الدولة مطلوبة",
-        "description-is-required": "الوصف مطلوب",
-        "enter-your-name": "أدخل أسمك",
-        "enter-your-shop-no": "أدخل رقم متجرك",
-        "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
-        "nearby-landmark": "معلم قريب",
-        "type-here": "أكتب هنا...",
-        "password-is-required": "كلمة المرور مطلوبة",
-        "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
-        "enter-restaurant-name": "أدخل اسم المطعم",
-        "enter-owner-name": "أدخل اسم المالك",
-        "enter-your-email": "أدخل بريدك الإلكتروني",
-        "enter-your-city-name": "أدخل اسم مدينتك",
-        "create-lead": "إنشاء الرصاص",
-        "town/city-name": "اسم البلدة/المدينة",
-        "name-is-required": "الاسم مطلوب",
-        "city-name-is-required": "اسم المدينة مطلوب",
-        "success": "نجاح !",
-        "successfully-registered": "تم تسجيل [اسم المطعم] بنجاح",
-        "link": "وصلة",
-        "back-to-home": "العودة إلى المنزل",
-        "pincode-must-not-contain-spaces": "يجب ألا يحتوي الرمز السري على مسافات",
-        "pincode-must-contain-only-digits": "يجب أن يحتوي الرمز السري على أرقام فقط",
-        "password-not-contain-spaces": "يجب ألا يحتوي اسم كلمة المرور على مسافات",
-        "owner-name-is-required": "اسم المالك مطلوب",
-        "email-is-invalid": "البريد الإلكتروني غير صالح",
-        "sign-in": "تسجيل الدخول للبقاء على اتصال.",
-        "logout": "تسجيل خروج",
-        "good-afternoon": "مساء الخير",
-        "restaurants": "مطاعم",
-        "generated-link": "الرابط الذي تم إنشاؤه",
-        "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
-        "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
-        "town-city-name": "اسم البلدة/المدينة",
-        "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
-        "reset-password" : "إعادة تعيين كلمة المرور",
-        "edit-profile" : "تعديل الملف الشخصي",
-        "onBoard-and-Create-Password" : "على متن الطائرة وإنشاء كلمة المرور"
-      
-      
-      
-
+  
 }
